--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      {window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (window.matchMedia("(max-width: 500px)").matches){
+  if (document.body.scrollTop < 80 || document.documentElement.scrollTop < 80) {
+    document.getElementById("navbar").style.backgroundColor= "#1d3867";
+  } else {
+    document.getElementById("navbar").style.backgroundColor= "none";
+  }
+
+  }
+}}
+    </script>
   </body>
 </html>
